@@ -21,8 +21,6 @@
 -- Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
 -- USA
 
-require("xapian")
-
 ---
 -- m: expected value
 -- n: obtained value
@@ -41,6 +39,15 @@ function expect(m, n, msg)
 end
 
 function run_tests()
+  local xap = require 'xapian'
+  -- Check that require sets global "xapian":
+  expect(true, nil ~= xapian, 'global xapian is nil')
+  expect('table', type(xapian), 'global xapian is not a table')
+  -- Check that require returns the module table (SWIG 2.0.4 returned 'xapian'):
+  expect(true, nil ~= xap, "require 'xapian' returned nil")
+  expect('table', type(xap), "require 'xapian' didn't return a table")
+  expect(xap, xapian, "require 'xapian' return value not the same as global xapian")
+
   stem = xapian.Stem("english")
   doc = xapian.Document()
   doc:set_data("is there anybody out there?")
